fix: handle long command lines for .bat and .cmd (#2035)